# spooky

./: .ccls  .gitignore  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  configure~  spooky-c-srcs.mk
include/: sp_atom.h  sp_base.h  sp_box.h  sp_config.h  sp_console.h  sp_context.h  sp_db.h  sp_debug.h  sp_error.h  sp_font.h  sp_gui.h  sp_hash.h  sp_help.h  sp_hud.h  sp_io.h  sp_iter.h  sp_limits.h  sp_log.h  sp_math.h  sp_menu.h  sp_pak.h  sp_pool.h  sp_spooky.h  sp_sprite.h  sp_str.h  sp_string.h  sp_text.h  sp_tiles.h  sp_time.h  sp_types.h  sp_wm.h  sp_z.h
src/: Makefile.am  sp_atom.c  sp_base.c  sp_box.c  sp_config.c  sp_console.c  sp_context.c  sp_db.c  sp_debug.c  sp_error.c  sp_font.c  sp_gui.c  sp_hash.c  sp_help.c  sp_hud.c  sp_io.c  sp_limits.c  sp_log.c  sp_math.c  sp_menu.c  sp_pak.c  sp_pool.c  sp_spooky.c  sp_sprite.c  sp_str.c  sp_text.c  sp_tiles.c  sp_time.c  sp_wm.c  sp_z.c  spooky.ini
src/res/: menus.mnudef
